navbar fix + overflow of about1

--- a/css/zigninnovations.css
+++ b/css/zigninnovations.css
@@ -229,7 +229,7 @@ h1 {
   position: absolute;
   top: 20px;
   z-index: 100;
-  width: 560px;
+  width: 660px;
   right: 0;
   background-color: rgba(119, 224,221, 0.7);
   padding: 30px;
